welcome.lessons.welcome.bat.bool2.InOrder.scala.code
def inOrder(a:Int, b:Int, c:Int, bOk:Boolean):Boolean = {if (c>b) {if (b<ok) {return bOk}
                                                                   else return b>a}
                                                        else return false}